--- a/sts4work/BootThymeleafJpa/src/main/resources/templates/mycar/updateform.html
+++ b/sts4work/BootThymeleafJpa/src/main/resources/templates/mycar/updateform.html
@@ -9,6 +9,39 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+	<div style="margin: 100px 100px; width: 500px;">
+		<form action="update" method="post" enctype="multipart/form-data">
+		<input type="hidden" name="num" th:value="${dto.num}">
+			<table class="table table-bordered">
+				<tr>
+					<th class="table-warning" width="120">자동차명</th>
+					<td><input type="text" name="carname" class="form-control"
+						style="width: 130px;" required="required" th:value="${dto.carname}"></td>
+				</tr>
+				<tr>
+					<th class="table-warning" width="120">자동차색상</th>
+					<td><input type="color" name="carcolor" class="form-control"
+						style="width: 120px;" required="required" th:value="${dto.carcolor}"></td>
+				</tr>
+				<tr>
+					<th class="table-warning" width="120">자동차가격</th>
+					<td><input type="text" name="carprice" class="form-control"
+						style="width: 280px;" required="required" th:value="${dto.carprice}"></td>
+				</tr>
+				<tr>
+					<th class="table-warning" width="120">자동차사진</th>
+					<td><input type="file" name="upload" class="form-control"
+						style="width: 250px;" multiple="multiple"></td>
+				</tr>
+				<tr>
+					<td colspan="2" align="center">
+					<button type="submit" class="btn btn-outline-info">수정</button>
+					<button type="button" class="btn btn-outline-info"
+					onclick="location.href='list'">목록</button>
+					</td>
+				</tr>
+			</table> 
+		</form>
+	</div>
 </body>
 </html>
